--- a/RxJS/index.html
+++ b/RxJS/index.html
@@ -3,9 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>RxJS</title>
+	<style>
+		* {
+			margin: 0;
+		}
+
+		html, body {
+			width: 100%;
+			height: 100%;
+		}
+
+		#app {
+			margin: 2% 10% 0 10%;
+			border: 1px solid #233;
+		}
+
+		#title {
+			margin: 10% 0 0 10%;
+		}
+	</style>
 </head>
 <body>
-	<canvas id='app'></canvas>
+	<h1 id="title">ActuallyCanvas</h1>
+	<canvas id='app' width="800px" height="500px"></canvas>
 	<script src="./dist/dist.js"></script>
 </body>
 </html>
