--- a/React/router/Router4.x/index.html
+++ b/React/router/Router4.x/index.html
@@ -9,6 +9,19 @@
 			list-style: none;
 			text-decoration: none;
 		}
+
+		.alertBox {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
+			background-color: #6fad76;
+			width: fit-content;
+			height: fit-content;
+			padding: 20px;
+		}
 	</style>
 </head>
 <body>
