--- a/JS设计模式/MVVM/test/test.html
+++ b/JS设计模式/MVVM/test/test.html
@@ -8,14 +8,20 @@
 </head>
 <body>
   <div id="app">
-
+    <div v-text="haha"></div>
+    <div v-text="haha"></div>
+    <input type="text" v-model="haha" />
+    <div v-html="haha"></div>
+    <div>{{ haha }}</div>
   </div>
   <script src="../compiler.js" charset="utf-8"></script>
   <script src="../observer.js" charset="utf-8"></script>
   <script src="../updater.js" charset="utf-8"></script>
   <script src="../viewModal.js" charset="utf-8"></script>
   <script type="text/javascript">
-    
+    new Compiler('#app' , {
+      haha: 'hallo world'
+    })
   </script>
 </body>
 </html>
