更新小脚架，无法开启前端独立热替换。

--- a/移动Web/wechatDevelopment/buildingWeb/webApp/list.html
+++ b/移动Web/wechatDevelopment/buildingWeb/webApp/list.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>test</title>
+	<title>list</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 	<link rel="stylesheet" href="./lib/css/weui.min.css">
-	<link rel="stylesheet" href="./lib/css/jquery-weui.min.css">
 </head>
 <body>
 	<div id="app"></div>
-	<script src="./lib/js/jquery-2.1.4.js"></script>
-	<script src="./lib/js/jquery-weui.min.js"></script>
-	<script src="./dist/test.js"></script>
+	<script src="./lib/js/jweixin-1.0.0.js" charset="utf-8"></script>
+	<script src="./dist/vendor.js" charset="utf-8"></script>
+	<script src="./dist/list.js"></script>
 </body>
 </html>
