--- a/移动Web/wechatDevelopment/buildingWeb/webApp/register.html
+++ b/移动Web/wechatDevelopment/buildingWeb/webApp/register.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>list</title>
+	<title>register</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 	<link rel="stylesheet" href="./lib/css/weui.min.css">
 </head>
@@ -11,6 +11,6 @@
 	<script src="./lib/js/weui.min.js" charset="utf-8"></script>
 	<script src="./lib/js/jweixin-1.0.0.js" charset="utf-8"></script>
 	<script src="./dist/vendor.js" charset="utf-8"></script>
-	<script src="./dist/list.js"></script>
+	<script src="./dist/register.js"></script>
 </body>
 </html>
