--- a/webpack/treeShaking/index.html
+++ b/webpack/treeShaking/index.html
@@ -7,6 +7,6 @@
   <title>treeShaking</title>
 </head>
 <body>
-  <script src="./dist/final.js" charset="utf-8"></script>
+  <script src="/dist/final.js" charset="utf-8"></script>
 </body>
 </html>
