--- a/JS others/_typed/index.html
+++ b/JS others/_typed/index.html
@@ -94,6 +94,7 @@
 			autoRun: true,
 			cursor: true,
 			isHtml: true,
+			// cursorFont: 'QwQ',
 			tasks: [{
 				str: '<h2>这是一个小demo</h2>',
 				start: function () {
