--- a/Node/Koa/koa-static-server/static/index.html
+++ b/Node/Koa/koa-static-server/static/index.html
@@ -7,5 +7,6 @@
 <body>
 	<h1>halo world</h1>
 	<img src="mp38321387_1446018553478_10.jpg" />
+	<video src="WeChat_20171018103543.mp4" controls></video>
 </body>
 </html>
