feat: 修改浏览器缓存总结

--- a/HTML5/meta/index.html
+++ b/HTML5/meta/index.html
@@ -18,13 +18,15 @@
 	<!-- http-equiv属性 相当于http的文件头作用，它可以向浏览器传回一些有用的信息，以帮助正确和精确地显示网页内容，与之对应的属性值为content，content中的内容其实就是各个参数的变量值。 -->
 	<meta http-equiv="expires" content="Fri,01Jan201618:18:18GMT" />
 	<!-- 自动刷新并指向新页面。 -->
-	<meta http-equiv="Refresh" content="2;URL=http://www.baidu.com">
+	<!-- <meta http-equiv="Refresh" content="2;URL=http://www.baidu.com"> -->
 	<!-- 提示浏览器网页的信息 -->
 	<meta http-equiv="content-Type" content="text/html;charset=UTF-8">
+
+	<meta http-equiv="Pragma" content="no-cache">
 	
 	<title>meta demo</title>
 </head>
 <body>
-	<h1>meta demo</h1>
+	<h2>meta demo</h2>
 </body>
 </html>
