--- a/HTML5/webStorage和cookies/index.html
+++ b/HTML5/webStorage和cookies/index.html
@@ -18,7 +18,7 @@
 		})
 
 		function setLocal () {
-			localStorage.setItem('haha', 'ff')
+			localStorage.setItem('haha', 'ee')
 		}
 
 		function set () {
