--- a/HTML5/webStorage和cookies/test.html
+++ b/HTML5/webStorage和cookies/test.html
@@ -14,6 +14,10 @@
 			sessionStorage.setItem('haha', 123)
 		}
 
+		function setLocal () {
+			localStorage.setItem('haha', 'ee')
+		}
+
 		function remove () {
 			sessionStorage.removeItem('haha')
 		}
