--- a/CSS/硬件加速/硬件加速的坑/index.html
+++ b/CSS/硬件加速/硬件加速的坑/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<!-- 对自己的 opacity 做 CSS 动画也可以创建一个层，放到GPU进行渲染，但是这种做法比较少。 不过这种做法并不会造成z-index比自己高的兄弟节点元素也创建层 -->
-	<div style="transform: translateZ(10px); position: relative;/* z-index: 3; animation:haha 2s infinite; */">123</div>
+	<div style="transform: translateZ(10px);/* position: relative; z-index: 3; animation:haha 2s infinite; */">123</div>
 	<div>456</div>
 	<div style="">
 	    <img src="mm1.jpg" alt="123" style="position:absolute; z-index:2;">
