feat: test gulp

--- a/Gulp/testGulp/index.html
+++ b/Gulp/testGulp/index.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>testGulp</title>
+	<link rel="stylesheet" href="src/css/test/all.css">
 </head>
 <body>
-	<h1>helloWorld</h1>
+	<h1>helloWorlddd</h1>
 	<button id='haha'>haha</button>
-
-	<script src="dist/all.min.js"></script>
-	<script src="js/a.js"></script>
+	<script src="src/js/test/all.js"></script>
 </body>
 </html>
